# Kibana-demo-project

./: Dockerfile  README.md  docker-compose.yml  filebeat.yml  log_generator.py  pyproject.toml  runtime_field.txt
