[tool.poetry]
name = "elk" # Poetry prefers kebab-case
version = "0.1.0"
description = "A script to generate dummy logs for Elasticsearch demos, optionally using Groq for realistic messages."
authors = ["Your Name <you@example.com>"] # Replace with your details
readme = "README.md" # Optional: if you have a README
package-mode=false

[tool.poetry.dependencies]
python = "^3.12" # Specify the Python version you want to support
langchain-ollama = "^0.3.3"
groq = "^0.28.0"
